--- a/style.css
+++ b/style.css
@@ -177,4 +177,21 @@ body {
   bottom: -5px;
   filter: drop-shadow(10px 10px 5px #222);
 }
+
+footer h4 {
+  font-size: 45px;
+  letter-spacing: 5px;
+  color: grey;
+}
+  
+footer p {
+  font-size: 30px;
+  letter-spacing: 5px;
+  color: blue;
+}
+
+footer {
+  padding-top: 30px:
+}
+
 /* extra end */
