--- a/style.css
+++ b/style.css
@@ -177,4 +177,20 @@ body {
   bottom: -5px;
   filter: drop-shadow(10px 10px 5px #222);
 }
+/* Tambahkan CSS untuk tag <p> yang berada didalam <footer> */
+footer h3 {
+  text-align: left;
+  font-size: 45px;
+  color: gray;
+}
+
+footer p {
+  text-align: left;
+  font-size: 30px;
+  color: gray;
+}
+/* Tambahkan CSS untuk tag <footer> */
+footer {
+  padding-top: 30px;
+}
 /* extra end */
